fixed hidden overflow x

--- a/themes/iowa-law-review/scss/imports/layout/article.scss
+++ b/themes/iowa-law-review/scss/imports/layout/article.scss
@@ -56,7 +56,7 @@
 	}
 
 	div.bigtext {
-		overflow-y: hidden;
+		//overflow-y: hidden;
 		line-height: 1.8;
 		font-size: 22px;
 
